# custom-toolbox

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE.REMOVED.git-id  README.md  about.cpp  about.h  build.sh  cmd.cpp  cmd.h  common.h  custom-toolbox.conf  custom-toolbox.desktop  custom-toolbox.pro  custom-toolbox_0.17.1.dsc  custom-toolbox_0.17.1.tar.xz  custom-toolbox_0.17.10.dsc  custom-toolbox_0.17.10.tar.xz  custom-toolbox_0.17.10_amd64.changes  custom-toolbox_0.17.10_amd64.deb  custom-toolbox_0.17.10_i386.changes  custom-toolbox_0.17.10_i386.deb  custom-toolbox_0.17.1_amd64.changes  custom-toolbox_0.17.1_amd64.deb  custom-toolbox_0.17.2+1.dsc  custom-toolbox_0.17.2+1.tar.xz  custom-toolbox_0.17.2+1_amd64.changes  custom-toolbox_0.17.2+1_amd64.deb  custom-toolbox_0.17.2+1_i386.changes  custom-toolbox_0.17.2+1_i386.deb  custom-toolbox_0.17.2.dsc  custom-toolbox_0.17.2.tar.xz  custom-toolbox_0.17.2_amd64.changes  custom-toolbox_0.17.2_amd64.deb  custom-toolbox_0.17.2_i386.changes  custom-toolbox_0.17.2_i386.deb  custom-toolbox_0.17.5.dsc  custom-toolbox_0.17.5.tar.xz  custom-toolbox_0.17.5_amd64.changes  custom-toolbox_0.17.5_amd64.deb  (+37 more)
.github/workflows/: release.yaml
debian/: .changelog.swp  changelog  control  install  rules
debs/: README.md  custom-toolbox_0.19.9.dsc  custom-toolbox_0.19.9.tar.xz  custom-toolbox_0.19.9_amd64.changes  custom-toolbox_0.19.9_amd64.deb  custom-toolbox_0.19.9_i386.deb  custom-toolbox_0.20.1.dsc  custom-toolbox_0.20.1.tar.xz  custom-toolbox_0.20.11.dsc  custom-toolbox_0.20.11.tar.xz  custom-toolbox_0.20.11_amd64.changes  custom-toolbox_0.20.11_amd64.deb  custom-toolbox_0.20.11_i386.deb  custom-toolbox_0.20.1_amd64.changes  custom-toolbox_0.20.1_amd64.deb  custom-toolbox_0.20.1_i386.deb  custom-toolbox_0.20.4.dsc  custom-toolbox_0.20.4.tar.xz  custom-toolbox_0.20.4_amd64.changes  custom-toolbox_0.20.4_amd64.deb  custom-toolbox_0.20.4_i386.deb  custom-toolbox_0.20.9.1.dsc  custom-toolbox_0.20.9.1.tar.xz  custom-toolbox_0.20.9.1_amd64.changes  custom-toolbox_0.20.9.1_amd64.deb  custom-toolbox_0.20.9.1_i386.deb  custom-toolbox_0.20.9.2.dsc  custom-toolbox_0.20.9.2.tar.xz  custom-toolbox_0.20.9.2_amd64.changes  custom-toolbox_0.20.9.2_amd64.deb  custom-toolbox_0.20.9.2_i386.deb  custom-toolbox_0.20.9.3.dsc  custom-toolbox_0.20.9.3.tar.xz  custom-toolbox_0.20.9.3_amd64.changes  custom-toolbox_0.20.9.3_amd64.deb  custom-toolbox_0.20.9.3_i386.deb  custom-toolbox_0.20.9.4.dsc  custom-toolbox_0.20.9.4.tar.xz  custom-toolbox_0.20.9.4_amd64.changes  custom-toolbox_0.20.9.4_amd64.deb  (+154 more)
help/: help.html  license.html
src/: about.cpp  about.h  flatbutton.cpp  flatbutton.h  main.cpp  mainwindow.cpp  mainwindow.h  version.h
translations/: custom-toolbox_af.ts  custom-toolbox_am.ts  custom-toolbox_ar.ts  custom-toolbox_ast.ts  custom-toolbox_be.ts  custom-toolbox_bg.ts  custom-toolbox_bn.ts  custom-toolbox_bs.ts  custom-toolbox_bs_BA.ts  custom-toolbox_ca.ts  custom-toolbox_ceb.ts  custom-toolbox_co.ts  custom-toolbox_cs.ts  custom-toolbox_cy.ts  custom-toolbox_da.ts  custom-toolbox_de.ts  custom-toolbox_el.ts  custom-toolbox_en.ts  custom-toolbox_en_GB.ts  custom-toolbox_en_US.ts  custom-toolbox_eo.ts  custom-toolbox_es.ts  custom-toolbox_es_ES.ts  custom-toolbox_et.ts  custom-toolbox_eu.ts  custom-toolbox_fa.ts  custom-toolbox_fi.ts  custom-toolbox_fi_FI.ts  custom-toolbox_fil.ts  custom-toolbox_fil_PH.ts  custom-toolbox_fr.ts  custom-toolbox_fr_BE.ts  custom-toolbox_fr_FR.ts  custom-toolbox_fy.ts  custom-toolbox_ga.ts  custom-toolbox_gd.ts  custom-toolbox_gl.ts  custom-toolbox_gl_ES.ts  custom-toolbox_gu.ts  custom-toolbox_ha.ts  (+89 more)
translations-desktop-file/desktop-in/: custom-toolbox.desktop.in
translations-desktop-file/po/: LINGUAS  (+127 more)
(+2 files in other folders)
